--- a/app/src/main/res/screens/authentication/layout/fragment_authentication.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_authentication.xml
@@ -1,68 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-        <variable
-            name="authenticationFragment"
-            type="com.veldan.askword_us.authentication.AuthenticationFragment" />
-    </data>
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layout_authentication"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    app:layoutDescription="@xml/authentication_scene">
 
-    <androidx.constraintlayout.motion.widget.MotionLayout
-        android:id="@+id/layout_authentication"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layoutDescription="@xml/authentication_scene">
+    <Button
+        android:id="@+id/btn_sign_in_without_registration"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/authentication_btn_margin_horizontal"
+        android:text="@string/authentication_btn_sign_in_without_password"
+        android:textSize="@dimen/button_text_size" />
 
-        <Button
-            android:id="@+id/btn_sign_in_without_registration"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="@dimen/authentication_btn_margin_horizontal"
-            android:text="@string/authentication_btn_sign_in_without_password"
-            android:textSize="@dimen/button_text_size"
-            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="spread" />
+    <Button
+        android:id="@+id/btn_sign_in"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/authentication_btn_margin_horizontal"
+        android:text="@string/authentication_btn_sign_in"
+        android:textSize="@dimen/button_text_size" />
 
-        <Button
-            android:id="@+id/btn_sign_in"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="@dimen/authentication_btn_margin_horizontal"
-            android:onClick="@{() -> authenticationFragment.transitionToSignIn()}"
-            android:text="@string/authentication_btn_sign_in"
-            android:textSize="@dimen/button_text_size"
-            app:layout_constraintBottom_toTopOf="@+id/btn_registration"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in_without_registration"
-            app:layout_constraintVertical_bias="0.05" />
+    <Button
+        android:id="@+id/btn_registration"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="@dimen/authentication_btn_margin_horizontal"
+        android:text="@string/authentication_btn_registration"
+        android:textSize="@dimen/button_text_size" />
 
-        <Button
-            android:id="@+id/btn_registration"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginHorizontal="@dimen/authentication_btn_margin_horizontal"
-            android:onClick="@{() -> authenticationFragment.transitionToRegistration()}"
-            android:text="@string/authentication_btn_registration"
-            android:textSize="@dimen/button_text_size"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.2"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/btn_sign_in"
-            app:layout_constraintVertical_bias="0.05" />
+    <include
+        android:id="@+id/layout_warning"
+        layout="@layout/layout_warning" />
 
-        <include
-            android:id="@+id/layout_warning"
-            layout="@layout/layout_warning" />
-
-
-    </androidx.constraintlayout.motion.widget.MotionLayout>
-</layout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
