--- a/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
+++ b/app/src/main/res/screens/authentication/layout/fragment_sign_in.xml
@@ -6,6 +6,10 @@
         <variable
             name="signInFragment"
             type="com.veldan.askword_us.authentication.sign_in.SignInFragment" />
+
+        <variable
+            name="signInViewModel"
+            type="com.veldan.askword_us.authentication.sign_in.SignInViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -69,6 +73,40 @@
             app:layout_constraintEnd_toEndOf="@id/edit_password"
             app:layout_constraintStart_toStartOf="@id/edit_password"
             app:layout_constraintTop_toBottomOf="@id/edit_password" />
+
+        <TextView
+            android:id="@+id/tv_verify_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="@{() -> signInFragment.verification()}"
+            android:text="@string/registration_tv_verify_email"
+            android:textColor="#FF0000"
+            android:textSize="20sp"
+            android:visibility="@{signInViewModel.visibilityTextViewVerifyEmail}"
+            app:layout_constraintBottom_toTopOf="@+id/ib_done"
+            app:layout_constraintEnd_toEndOf="@id/edit_password"
+            app:layout_constraintStart_toStartOf="@+id/edit_password"
+            app:layout_constraintTop_toBottomOf="@+id/edit_password" />
+
+        <WebView
+            android:id="@+id/web_gmail"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:elevation="2dp"
+            android:visibility="invisible" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottie_progress"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:elevation="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_percent="0.5"
+            app:lottie_loop="true" />
 
         <ImageButton
             android:id="@+id/ib_done"
