--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -5,27 +5,82 @@
     android:id="@+id/navigation"
     app:startDestination="@id/startFragment">
 
+    <!--==============================
+           Start
+        ==============================-->
     <fragment
         android:id="@+id/startFragment"
         android:name="com.veldan.askword_us.start.StartFragment"
         android:label="StartFragment"
         tools:layout="@layout/fragment_start">
         <action
-            android:id="@+id/action_startFragment_to_authenticationFragment"
+            android:id="@+id/action_startFragment_to_authentication"
             app:destination="@id/authentication"
             app:popUpTo="@id/startFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true">
+        </action>
         <action
-            android:id="@+id/action_startFragment_to_dictionaryOrStudyFragment"
-            app:destination="@id/dictionaryOrStudyFragment"
+            android:id="@+id/action_startFragment_to_dictionaryOrStudy"
+            app:destination="@id/dictionaryOrStudy"
             app:popUpTo="@id/startFragment"
-            app:popUpToInclusive="true" />
+            app:popUpToInclusive="true"/>
     </fragment>
-    <fragment
-        android:id="@+id/dictionaryOrStudyFragment"
-        android:name="com.veldan.askword_us.dictionary_or_study.DictionaryOrStudyFragment"
-        android:label="DictionaryOrStudyFragment"
-        tools:layout="@layout/fragment_dictionary_or_study">
+
+    <!--==============================
+           Authentication
+        ==============================-->
+    <navigation
+        android:id="@+id/authentication"
+        app:startDestination="@id/authenticationFragment">
+        <fragment
+            android:id="@+id/authenticationFragment"
+            android:name="com.veldan.askword_us.authentication.AuthenticationFragment"
+            android:label="AuthenticationFragment"
+            tools:layout="@layout/fragment_authentication">
+            <action
+                android:id="@+id/action_authenticationFragment_to_signInFragment"
+                app:destination="@id/signInFragment" />
+            <action
+                android:id="@+id/action_authenticationFragment_to_registrationFragment"
+                app:destination="@id/registrationFragment" />
+            <action
+                android:id="@+id/action_authenticationFragment_to_dictionaryOrStudyFragment"
+                app:destination="@id/dictionaryOrStudy" />
+        </fragment>
+
+        <fragment
+            android:id="@+id/registrationFragment"
+            android:name="com.veldan.askword_us.authentication.registration.RegistrationFragment"
+            android:label="RegistrationFragment"
+            tools:layout="@layout/fragment_registration">
+            <action
+                android:id="@+id/action_registrationFragment_to_dictionaryOrStudy"
+                app:destination="@id/dictionaryOrStudy"
+                app:popUpTo="@id/dictionaryOrStudy"
+                app:popUpToInclusive="true" />
+        </fragment>
+
+        <fragment
+            android:id="@+id/signInFragment"
+            android:name="com.veldan.askword_us.authentication.sign_in.SignInFragment"
+            android:label="SignInFragment"
+            tools:layout="@layout/fragment_sign_in">
+            <action
+                android:id="@+id/action_signInFragment_to_dictionaryOrStudy"
+                app:destination="@id/dictionaryOrStudy"
+                app:popUpTo="@id/dictionaryOrStudy"
+                app:popUpToInclusive="true" />
+        </fragment>
+    </navigation>
+
+
+    <!--==============================
+           Dictionary or Study
+        ==============================-->
+    <navigation
+        android:id="@+id/dictionaryOrStudy"
+        app:startDestination="@id/dictionaryOrStudyFragment">
+
         <argument
             android:name="userName"
             app:argType="string" />
@@ -35,84 +90,35 @@
         <argument
             android:name="userEmail"
             app:argType="string" />
-        <action
-            android:id="@+id/action_dictionaryOrStudyFragment_to_dictionaryFragment"
-            app:destination="@id/dictionaryFragment" />
-        <action
-            android:id="@+id/action_dictionaryOrStudyFragment_to_authenticationFragment"
-            app:destination="@id/authentication"
-            app:popUpTo="@id/dictionaryOrStudyFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
-    <fragment
-        android:id="@+id/dictionaryFragment"
-        android:name="com.veldan.askword_us.dictionary.DictionaryFragment"
-        android:label="DictionaryFragment"
-        tools:layout="@layout/fragment_dictionary" />
-    <navigation android:id="@+id/authentication"
-        app:startDestination="@id/authenticationFragment">
-        <fragment
-            android:id="@+id/authenticationFragment"
-            android:name="com.veldan.askword_us.authentication.AuthenticationFragment"
-            android:label="AuthenticationFragment"
-            tools:layout="@layout/fragment_authentication" >
-            <action
-                android:id="@+id/action_authenticationFragment_to_signInFragment"
-                app:destination="@id/signInFragment" />
-            <action
-                android:id="@+id/action_authenticationFragment_to_registrationFragment"
-                app:destination="@id/registrationFragment" />
-            <action
-                android:id="@+id/action_authenticationFragment_to_dictionaryOrStudyFragment"
-                app:destination="@id/dictionaryOrStudyFragment" />
-        </fragment>
-        <fragment
-            android:id="@+id/registrationFragment"
-            android:name="com.veldan.askword_us.authentication.registration.RegistrationFragment"
-            android:label="RegistrationFragment"
-            tools:layout="@layout/fragment_registration">
-            <action
-                android:id="@+id/action_registrationFragment_to_dictionaryOrStudyFragment"
-                app:destination="@id/dictionaryOrStudyFragment"
-                app:popUpTo="@id/authenticationFragment"
-                app:popUpToInclusive="true" />
-        </fragment>
-        <fragment
-            android:id="@+id/signInFragment"
-            android:name="com.veldan.askword_us.authentication.sign_in.SignInFragment"
-            android:label="SignInFragment"
-            tools:layout="@layout/fragment_sign_in">
-            <action
-                android:id="@+id/action_signInFragment_to_dictionaryOrStudyFragment"
-                app:destination="@id/dictionaryOrStudyFragment"
-                app:popUpTo="@id/authenticationFragment"
-                app:popUpToInclusive="true" />
-        </fragment>
+
         <fragment
             android:id="@+id/dictionaryOrStudyFragment"
             android:name="com.veldan.askword_us.dictionary_or_study.DictionaryOrStudyFragment"
             android:label="DictionaryOrStudyFragment"
             tools:layout="@layout/fragment_dictionary_or_study">
             <action
+                android:id="@+id/action_dictionaryOrStudyFragment_to_authentication"
+                app:destination="@id/authentication"
+                app:popUpTo="@id/dictionaryOrStudyFragment"
+                app:popUpToInclusive="true" />
+            <action
                 android:id="@+id/action_dictionaryOrStudyFragment_to_dictionaryFragment"
                 app:destination="@id/dictionaryFragment" />
             <action
-                android:id="@+id/action_dictionaryOrStudyFragment_to_authenticationFragment"
-                app:destination="@id/authenticationFragment" />
-            <argument
-                android:name="userName"
-                app:argType="string" />
-            <argument
-                android:name="userSurname"
-                app:argType="string" />
-            <argument
-                android:name="userEmail"
-                app:argType="string" />
+                android:id="@+id/action_dictionaryOrStudyFragment_to_studyFragment"
+                app:destination="@id/studyFragment" />
         </fragment>
+
         <fragment
             android:id="@+id/dictionaryFragment"
             android:name="com.veldan.askword_us.dictionary.DictionaryFragment"
             android:label="DictionaryFragment"
-            tools:layout="@layout/fragment_dictionary"/>
+            tools:layout="@layout/fragment_dictionary" />
+
+        <fragment
+            android:id="@+id/studyFragment"
+            android:name="com.veldan.askword_us.study.StudyFragment"
+            android:label="StudyFragment"
+            tools:layout="@layout/fragment_study" />
     </navigation>
 </navigation>
