--- a/app/src/main/res/screens/dictionary_or_study/layout/fragment_dictionary_or_study.xml
+++ b/app/src/main/res/screens/dictionary_or_study/layout/fragment_dictionary_or_study.xml
@@ -66,6 +66,7 @@
             android:layout_height="0dp"
             android:layout_margin="@dimen/start_btn_margin"
             android:background="@drawable/btn_state"
+            android:onClick="@{()-> dictionaryOrStudyFragment.transitionToStudy()}"
             android:text="@string/start_btn_study"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="2:1"
